--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,128 @@
-lsi: false
-safe: true
-source: [..]
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
-theme: jekyll-theme-slate
+### VALUES YOU SHOULD CHANGE ###
+
+# GENERAL SITE SETTINGS
+# title: This will be displayed as the website's name in your browser tab.
+title: James Smith
+# description: This will be meta HTML tag content. This can be ignored.
+description: Personal website powered by Jekyll
+# baseurl: The subpath of your site
+# > set this to "", if you renamed the repository to <user>.github.io
+baseurl: ""
+
+# LANDING PAGE
+# username: This will displayed on the landing page as your name.
+username: James Smith
+# typing_text: This will be typed before 'scroll down for more'.
+# > set this to your job title, e.g. Fullstack Developer
+typing_text: Indie Game Developer
+# email: Your E-Mail address for the email button.
+email: littledevilgamesofficial@gmail.com
+# For every social button you want to display, set your username or userid
+# If you do not use one of the following websites, then leave it empty
+# > twitter_username:
+github_username: moonbase420
+codepen_username: 
+dev_username: 
+linkedin_username: james-s-66067b176
+twitter_username: 
+
+# ABOUT ME SECTION
+# show_aboutme_card:
+# > setting this to true, will display the About Me section
+# > setting this to false, will omit the About Me section
+show_aboutme_card: true
+# about_me_title: The will be displayed as the title in the About Me section
+about_me_title: About Me
+# about_me_description: This will be displayed under the title.
+about_me_description: I have a passion for games, I got my start in game dev back in 2015 when I created and published my first game <a href="https://play.google.com/store/apps/details?id=com.ldg.proton&hl=en_US&gl=US">Proton Blaster</a> on the Google play store. Since then I went on to develop my skills and further my understanding of the development process. In 2018 I got contracted by <a href="https://www.linkedin.com/company/drakelinglabs/">Drakeling Labs</a> to work on <a href="https://store.steampowered.com/app/581910/Iron_Armada/">Iron Armada</a> as a community dev and quickly worked my way up to lead programmer. In October 2020 I was given the opportunity to work on <a href="https://store.steampowered.com/app/1203650/Blood_Metal/">Blood Metal</a> as the lead programmer and in September was promoted to project manager.
+
+# SKILLS SECTION
+# show_skills_card:
+# > setting this to true, will display the Skills section
+# > setting this to false, will omit the Skills section
+show_skills_card: true
+# about_me_title: The will be displayed as the title in the Skills section
+skills_title: Skills
+
+# TIMELINE SECTION
+# show_timeline_card:
+# > setting this to true, will display the Timeline section
+# > setting this to false, will omit the Timeline section
+show_timeline_card: false
+# timeline_title: The will be displayed as the title in the Timeline section
+timeline_title: Education & Experience
+# cv_download_link: The link where you host your cv.
+# > e.g. you share your cv on your dropbox, then add the dropbox link here
+cv_download_link: https://example.com/
+
+# PROJECTS SECTION
+# show_projects_card:
+# > setting this to true, will display the Projects section
+# > setting this to false, will omit the Projects section
+show_projects_card: true
+# show_projects:
+# > setting this to true, will display your listed projects in _data/projects.yml
+# > setting this to false, will omit your listed projects
+show_projects: true
+# projects_title: The will be displayed as the title of your projects
+projects_title: Projects
+# show_os_projects:
+# > setting this to true, will display your public projects on github
+# > setting this to false, will omit your public projects on github
+show_os_projects: false
+# os_projects_title: The will be displayed as the title of your open source projects
+os_projects_title: Open Source Projects
+
+# CONTACT SECTION
+# show_contact_card:
+# > setting this to true, will display the Contact section
+# > setting this to false, will omit the Contact section
+show_contact_card: true
+# contact_title: The will be displayed as the title in the Contact section
+contact_title: Contact
+# contact_description: This will be displayed under the title.
+contact_description:
+
+# GITHUB-METADATA
+# Set this to your forked repository
+# > e.g. <user>/<user>.github.io
+repository: moonbase420/moonbase420.github.io
+projects:
+  # sortby:
+  # > set this to pushed, if you want to sort your github repositories by time.
+  # > set this to stars, if you want to sort your github repositories by stars.
+  sort_by: pushed
+  exclude:
+    # archived:
+    # > setting this to true, will exclude archived repositories
+    # > setting this to false, will also display archived repositories
+    archived: true
+    # forks:
+    # > setting this to true, will exclude forked repositories
+    # > setting this to false, will also display forked repositories
+    forks: true
+    # projects: A list of the repository names you want to exclude from the listing.
+    projects:
+    # - repo1-to-be-excluded
+    # - repo2-to-be-excluded
+
+# GOOGLE-ANALYTICS
+# Set the id, if you want to track your website with Google Analytics
+# > set this to "", if you do not want to track with Google Analytics
+google-analytics:
+  id: ""
+
+### END OF VALUES YOU SHOULD CHANGE ###
+
+plugins:
+  - "jekyll-github-metadata"
+
+exclude:
+  [
+    "_assets",
+    "Gemfile",
+    "Gemfile.lock",
+    "gulpfile.js",
+    "node_modules",
+    "package.json",
+  ]
