--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: James Smith
 email: jamessmith94135@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/JSmith-LDG" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jsmith-ldg.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  JSmith-LDG
 linkedin_username: james-s-66067b176
